--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,7 @@
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
       "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Shared/OmsOrderConfirmation",
-      "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess"
+      "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess",
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
     }
