--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -60,3 +60,9 @@ checkout-data-gift-cart-payment-country-filter:
 
 oms-order-confirmation:
   - oms-order-confirmation/**
+
+oms-payone-error:
+  - oms-payone-error/**
+
+oms-retry-capture-process:
+  - oms-retry-capture-process/**
