--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "spryker/data-import": "^1.3.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
+    "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
     "spryker/product-image-storage": "^1.15",
     "spryker/product-storage-extension": "^1.0.0",
@@ -41,7 +42,9 @@
     "fond-of-kudu/checkout-data-product-country-filter": "*",
     "fond-of-kudu/country-zipcode-restriction": "*",
     "fond-of-kudu/product-image-storage-connector": "*",
-    "fond-of-kudu/oms-order-confirmation": "*"
+    "fond-of-kudu/oms-order-confirmation": "*",
+    "fond-of-kudu/oms-payone-error": "*",
+    "fond-of-kudu/oms-retry-capture-process": "*"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -66,7 +69,11 @@
       "FondOfKudu\\Shared\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Shared/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/src/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Zed/OmsOrderConfirmation",
-      "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Shared/OmsOrderConfirmation"
+      "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/src/FondOfKudu/Shared/OmsOrderConfirmation",
+      "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/src/FondOfKudu/Zed/OmsRetryCaptureProcess",
+      "FondOfKudu\\Shared\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/src/FondOfKudu/Shared/OmsRetryCaptureProcess",
+      "FondOfKudu\\Zed\\OmsPayoneError\\": "bundles/oms-payone-error/src/FondOfKudu/Zed/OmsPayoneError",
+      "FondOfKudu\\Shared\\OmsPayoneError\\": "bundles/oms-payone-error/src/FondOfKudu/Shared/OmsPayoneError"
     }
   },
   "autoload-dev": {
@@ -81,6 +88,8 @@
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
       "FondOfKudu\\Shared\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Shared/OmsOrderConfirmation",
+      "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess",
+      "FondOfKudu\\Zed\\OmsPayoneError\\": "bundles/oms-payone-error/tests/FondOfKudu/Zed/OmsPayoneError",
       "Generated\\": "src/Generated/",
       "Orm\\Zed\\": "src/Orm/Zed/"
     }
