--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
+    "spryker-eco/payone": "^4.4.2",
     "spryker/product-image-storage": "^1.15",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
