move plugin from pyz to module, get test-recipients from config, increase module version to 1.0.0

--- a/bundles/oms-retry-capture-process/composer.json
+++ b/bundles/oms-retry-capture-process/composer.json
@@ -10,7 +10,8 @@
   ],
   "require": {
     "php": ">=8.0",
-    "spryker/oms": ">= 8.0.0"
+    "spryker/oms": ">= 8.0.0",
+    "spryker-eco/payone": "^4.4.0"
   },
   "require-dev": {
     "fond-of-codeception/spryker": "*",
