--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": ">=8.0",
     "fond-of-oryx/product-country-restriction-checkout-connector": "^2.0.1",
+    "spryker-eco/payone": "^4.4.0",
     "spryker/carts-rest-api": "^5.0.0",
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
