--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
     "spryker-eco/payone": "^4.4.2",
+    "spryker/discount-promotions-rest-api": "^1.4.0",
     "spryker/product-image-storage": "^1.15",
+    "spryker/product-storage": "^1.1.0",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
@@ -41,6 +43,7 @@
     "fond-of-kudu/checkout-rest-api-country-extension": "*",
     "fond-of-kudu/checkout-data-product-country-filter": "*",
     "fond-of-kudu/country-zipcode-restriction": "*",
+    "fond-of-kudu/discount-promotion-rest-api": "*",
     "fond-of-kudu/product-image-storage-connector": "*",
     "fond-of-kudu/oms-order-confirmation": "*",
     "fond-of-kudu/oms-payone-error": "*",
@@ -54,6 +57,7 @@
       "FondOfKudu\\Shared\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Shared/CartsRestApi",
       "FondOfKudu\\Client\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Client/CartsRestApi",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
+      "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
