--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
       "FondOfKudu\\Shared\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Shared/CartsRestApi",
       "FondOfKudu\\Client\\CartsRestApi\\": "bundles/carts-rest-api/src/FondOfKudu/Client/CartsRestApi",
       "FondOfKudu\\Zed\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Zed/CountryZipcodeRestriction",
-      "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
+      "FondOfKudu\\Shared\\Glue\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
+      "FondOfKudu\\Shared\\Shared\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Shared/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
