--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "spryker-eco/payone": "^4.4.2",
     "spryker/discount-promotions-rest-api": "^1.4.0",
     "spryker/product-image-storage": "^1.15",
-    "spryker/product-storage": "^1.1.0",
+    "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
