--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/data-import": "^1.3.0",
+    "spryker/discount": "^9.34.0",
     "spryker/glossary-storage": "^1.0.0",
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/oms": ">= 8.0.0",
@@ -25,6 +26,7 @@
     "spryker/product-image-storage": "^1.15",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage-extension": "^1.0.0",
+    "spryker/price-product-storage": "^4.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
     "spryker/synchronization": "^1.16"
