--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "spryker/product-image-storage": "^1.15",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage-extension": "^1.0.0",
-    "spryker/price-product-storage": "^4.0.0",
+    "spryker/product-storage": "^1.13.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
     "spryker/synchronization": "^1.16"
