--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -59,3 +59,27 @@ quote:
 country-zipcode-restriction:
   - changed-files:
       - any-glob-to-any-file: ['bundles/country-zipcode-restriction/**']
+
+checkout-data-product-country-filter:
+  - changed-files:
+      - any-glob-to-any-file: ['bundles/checkout-data-product-country-filter/**']
+
+checkout-data-gift-cart-payment-country-filter:
+  - changed-files:
+      - any-glob-to-any-file: ['bundles/checkout-data-gift-cart-payment-country-filter/**']
+
+oms-order-confirmation:
+  - changed-files:
+      - any-glob-to-any-file: ['bundles/oms-order-confirmation/**']
+
+oms-payone-error:
+  - changed-files:
+      - any-glob-to-any-file: ['bundles/oms-payone-error/**']
+
+oms-retry-capture-process:
+  - changed-files:
+      - any-glob-to-any-file: ['bundles/oms-retry-capture-process/**']
+
+discount-promotion-rest-api:
+  - changed-files:
+      - any-glob-to-any-file: ['bundles/discount-promotion-rest-api/**']
