--- a/codeception.yml
+++ b/codeception.yml
@@ -11,6 +11,7 @@ include:
   - bundles/quote
   - bundles/oms-order-confirmation
   - bundles/oms-retry-capture-process
+  - bundles/oms-payone-error
   - bundles/discount-promotion-rest-api
 
 suites:
