--- a/bundles/discount-promotion-rest-api/composer.json
+++ b/bundles/discount-promotion-rest-api/composer.json
@@ -13,6 +13,7 @@
     "spryker/discount-promotions-rest-api": "^1.4.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
+    "spryker/currency": "^3.2.0 || ^4.0.0",
     "spryker/discount": "^9.34.0"
   },
   "require-dev": {
