--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "spryker/checkout-rest-api": "^3.0.0",
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
+    "spryker/currency": "^3.2.0 || ^4.0.0",
     "spryker/data-import": "^1.3.0",
     "spryker/discount": "^9.34.0",
     "spryker/glossary-storage": "^1.0.0",
