--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "spryker/oms-extension": "^1.3",
     "spryker-eco/payone": "^4.4.2",
     "spryker/discount-promotions-rest-api": "^1.4.0",
+    "spryker/product-image-storage": "^1.3.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
