--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
     "spryker/price-product-schedule": "^2.7.0",
-    "spryker/product": "^6.24.0",
+    "spryker/product": "^6.0.0",
+    "spryker/product-extension": "^1.5.0",
     "spryker/product-image-storage": "^1.3.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
