--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
     "spryker/price-product-schedule": "^2.7.0",
+    "spryker/price-product-storage": "^4.0.0",
     "spryker/product": "^6.0.0",
     "spryker/product-extension": "^1.5.0",
     "spryker/product-image-storage": "^1.3.0",
