--- a/bundles/discount-promotion-rest-api/composer.json
+++ b/bundles/discount-promotion-rest-api/composer.json
@@ -11,6 +11,7 @@
   "require": {
     "php": ">=8.0",
     "spryker/discount-promotions-rest-api": "^1.4.0",
+    "spryker/price-product-storage": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
     "spryker/currency": "^3.2.0 || ^4.0.0",
