--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "spryker/locale": "^2.0.0 || ^3.0.0 || ^4.0.0",
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
+    "spryker/price-product": "^4.0.0",
     "spryker/price-product-schedule": "^2.7.0",
     "spryker/price-product-storage": "^4.0.0",
     "spryker/product": "^6.0.0",
