--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
+    "spryker/store": "^1.4.0",
     "spryker/synchronization": "^1.16"
   },
   "require-dev": {
