--- a/composer.json
+++ b/composer.json
@@ -25,16 +25,17 @@
     "spryker/oms": ">= 8.0.0",
     "spryker/oms-extension": "^1.3",
     "spryker/price-product": "^4.0.0",
-    "spryker/price-product-schedule": "^2.7.0",
+    "spryker/price-product-schedule": "^2.0.0",
     "spryker/price-product-storage": "^4.0.0",
     "spryker/product": "^6.0.0",
-    "spryker/product-extension": "^1.5.0",
+    "spryker/product-extension": "^1.1.0",
     "spryker/product-image-storage": "^1.3.0",
     "spryker/product-resource-alias-storage": "^1.0.0",
     "spryker/product-storage": "^1.13.0",
     "spryker/product-storage-extension": "^1.0.0",
     "spryker/quote": "^2.0.0",
     "spryker/storage": "^3.20.0",
+    "spryker/store": "^1.1.0",
     "spryker/synchronization": "^1.16"
   },
   "require-dev": {
