--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "spryker/checkout-rest-api-extension": "^1.5.0",
     "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/currency": "^3.8.0 || ^4.0.0",
+    "spryker/customer": "^7.0.0",
     "spryker/data-import": "^1.3.0",
     "spryker/discount": "^9.34.0",
     "spryker/discount-promotions-rest-api": "^1.4.0",
@@ -72,6 +73,8 @@
       "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/src/FondOfKudu/Shared/DiscountPromotionsRestApi",
       "FondOfKudu\\Shared\\CountryZipcodeRestriction\\": "bundles/country-zipcode-restriction/src/FondOfKudu/Shared/CountryZipcodeRestriction",
+      "FondOfKudu\\Shared\\CustomerPasswordChangedAtConnector\\": "bundles/customer-password-changed-at-connector/src/FondOfKudu/Shared/CustomerPasswordChangedAtConnector",
+      "FondOfKudu\\Zed\\CustomerPasswordChangedAtConnector\\": "bundles/customer-password-changed-at-connector/src/FondOfKudu/Zed/CustomerPasswordChangedAtConnector",
       "FondOfKudu\\Client\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Client/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\ProductImageStorageConnector\\": "bundles/product-image-storage-connector/src/FondOfKudu/Shared/ProductImageStorageConnector",
       "FondOfKudu\\Shared\\Quote\\": "bundles/quote/src/FondOfKudu/Shared/Quote",
@@ -105,6 +108,7 @@
       "FondOfKudu\\Zed\\CheckoutRestApiCountryConnector\\": "bundles/checkout-rest-api-country-connector/tests/FondOfKudu/Zed/CheckoutRestApiCountryConnector",
       "FondOfKudu\\Zed\\CheckoutDataProductCountryFilter\\": "bundles/checkout-data-product-country-filter/tests/FondOfKudu/Zed/CheckoutDataProductCountryFilter",
       "FondOfKudu\\Zed\\CheckoutDataGiftCartPaymentCountryFilter\\": "bundles/checkout-data-gift-cart-payment-country-filter/tests/FondOfKudu/Zed/CheckoutDataGiftCartPaymentCountryFilter",
+      "FondOfKudu\\Zed\\CustomerPasswordChangedAtConnector\\": "bundles/customer-password-changed-at-connector/tests/FondOfKudu/Zed/CustomerPasswordChangedAtConnector",
       "FondOfKudu\\Glue\\DiscountPromotionsRestApi\\": "bundles/discount-promotion-rest-api/tests/FondOfKudu/Glue/DiscountPromotionsRestApi",
       "FondOfKudu\\Zed\\OmsOrderConfirmation\\": "bundles/oms-order-confirmation/tests/FondOfKudu/Zed/OmsOrderConfirmation",
       "FondOfKudu\\Zed\\OmsRetryCaptureProcess\\": "bundles/oms-retry-capture-process/tests/FondOfKudu/Zed/OmsRetryCaptureProcess",
